--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,14 @@ permissions:
 jobs:
   build_site:
     runs-on: ubuntu-latest
-    # This block tells GitHub where the deployment is going
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    
+    # We define the variable here so EVERY step below can see it
+    env:
+      VITE_WEB3FORMS_KEY: ${{ secrets.VITE_WEB3FORMS_KEY }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,8 +34,6 @@ jobs:
         
       - name: Build
         run: npm run build
-        env:
-          VITE_WEB3FORMS_KEY: ${{ secrets.VITE_WEB3FORMS_KEY }}
           
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
